-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.1118 2011-06-25 20:46:48 jluis Exp $
-----------------------------------------------------------------------------------------

2011-06-25	jluis
	* gmtswitch.bat:	The Windows version of the *nix gmtswitch script

2011-06-23	pwessel
	* gmt_shore.c:		Now reads new GSHHS 2.1.2 format that includes feature areas
				stored as doubles.  The old int(0.1*area) would set all
				areas < 0.1 km^2 to zero [only affected gshhs supplement].
	* gshhs/gshhs_func.c:	Updated to handle GSHHS 2.1.2.  Fixed porting bugs.

2011-06-23	remko
	* gmt_init.c:		Introduced MAP_TICK_LENGTH_{PRIMARY,SECONDARY} to set major
				and minor primary and secondary ticks. Replaces MAP_TICK_LENGTH.
				Introduced MAP_TICK_PEN_{PRIMARY,SECONDARY} to replace MAP_TICK_PEN.
	* gmt_keywords.*:	---"---
	* gmt_conf.*:		---"---
				Changed map font sizes to 12p,14p,16p,24p (from 14p,16p,24p,36p).
	* *.ps:			Updated to conform to new defaults.

2011-06-22	jluis
	* s_rint.c:		(for) Windows rint function that does ieee compliant rounding like GCC

2011-06-22	remko
	* gmt_map.c:		Now, for lat/lon plots, when using e.g. -Bag, sets the automatic
				intervals the same in both directions (unless you use -Bag/ag).
				Also 'g' follows 'f', unless in consort with 'a', then follows 'a'.

2011-06-21	jluis
	* gmtinstall.bat:	It now builds also the supplements and put all dlls 
				supplements inside the main gmt.dll.

2011-06-21	pwessel
	* pslegend_func.c:	Append +r[<radius>] to -F to get a rounded rectangular border.
				Also added +i[<gap>/]<pen> for an secondary (inner) frame,
				+p<pen> to specify the pen used for main frame, and +s to
				add a shifted background shaded rectangle.
	* grdhisteq_func.c:	Fixed porting bugs and added test script.

2011-06-21	remko
	* pslib.[ch]:		Added rounded rectangle symbol PSL_RNDRECT ('R').
	* PSL_prologue.ps:	---"---
	* psxy[z]_func.c:	---"---